<resources>
    <string name="app_name">ProjectAMIO</string>
    <string name="TV1_str">Service status:</string>
    <string name="TV2_str">\???</string>
    <string name="TV3_str">Last result:</string>
    <string name="TV4_str">\???</string>
    <string name="TV5_str">Last alert:</string>
    <string name="TV6_str">\???</string>
    <string name="leftButton_str">ToggleButton</string>
    <string name="checkboxText">Start at boot</string>
    <string name="TV2_str_off">Arrêté</string>
    <string name="TV2_str_on">En cours</string>
    <string name="buttonWebService">WebService</string>
    <string name="WebServiceDisplay0_str">Light mote0</string>
    <string name="WebServiceDisplayValue0_str">\???</string>
    <string name="WebServiceDisplay1_str">Light mote1</string>
    <string name="WebServiceDisplayValue1_str">\???</string>
    <string name="WebServiceDisplay2_str">Light mote2</string>
    <string name="WebServiceDisplayValue2_str">\???</string>
    <string name="WebServiceDisplay3_str">Light mote3</string>
    <string name="WebServiceDisplayValue3_str">\???</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="buttonSettings">Settings</string>
</resources>