<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/TV1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/TV1_str"
                android:textSize="30sp"
                android:layout_weight="0.5" />

        <TextView
                android:id="@+id/TV2"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:gravity="center"
                android:text="@string/TV2_str"
                android:textSize="30sp"
                android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linear_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_below="@id/linear_layout1">

        <TextView
                android:id="@+id/TV3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/TV3_str"
                android:textSize="30sp"
                android:layout_weight="0.5" />

        <TextView
                android:id="@+id/TV4"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:gravity="center"
                android:text="@string/TV4_str"
                android:textSize="30sp"
                android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linear_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_below="@id/linear_layout2">

        <TextView
                android:id="@+id/TV5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/TV5_str"
                android:textSize="30sp"
                android:layout_weight="0.5" />

        <TextView
                android:id="@+id/TV6"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:gravity="center"
                android:text="@string/TV6_str"
                android:textSize="30sp"
                android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layout_button"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_below="@id/linear_layout3">

        <Switch
                android:id="@+id/leftButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <Switch
                android:id="@+id/rightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layout_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/layout_button"
            android:layout_marginTop="25dp">

        <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkboxText" />

        <Button
                android:id="@+id/buttonWebService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/buttonWebService" />

    </LinearLayout>

</RelativeLayout>